--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
           <div class="row">
             <div class="col-12">
-              <p class="text-white-50 fs-11">&copy; 1997-2019 Netflix, inc{kasdabanaòxjapihdad}</p>
+              <p class="text-white-50 fs-11">&copy 1997-2019 Netflix, inc{kasdabanaòxjapihdad}</p>
             </div>
           </div>
         </div>
