Impossibile scrivere bene le proprie variabili

--- a/editsprofile.html
+++ b/editsprofile.html
@@ -61,7 +61,7 @@
                 <p class="text-white fs-5">Maturity Settings :</p>
                 <p class="text-white bg-grey fs-6 fw-semibold p-2 d-inline-block">ALL MATURITY RATING</p>
                 <p class="text-white fs-6 mt-2">Show titles of all maturity ratings for this profile</p>
-                <button type="button" class="btn border border-gray rounded-0 text-white-50 px-4 py-1 mt-2" style="letter-spacing: 1.5px">EDIT</button>
+                <button type="button" class="btn border border-grey rounded-0 text-white-50 px-4 py-1 mt-2" style="letter-spacing: 1.5px">EDIT</button>
               </div>
 
               <div class="border-bottom border-secondary-subtle pb-3 mb-3">
@@ -86,11 +86,11 @@
                 SAVE
               </button>
 
-              <button type="button" class="btn col-12 col-md-4 border border-gray rounded-0 text-white-50 px-4 py-2 mb-2 mb-md-0" style="letter-spacing: 1.5px">
+              <button type="button" class="btn col-12 col-md-4 border border-grey rounded-0 text-white-50 px-4 py-2 mb-2 mb-md-0" style="letter-spacing: 1.5px">
                 CANCEL
               </button>
 
-              <button type="button" class="btn col-12 col-md-4 border border-gray rounded-0 text-white-50 px-4 py-2" style="letter-spacing: 1.5px">
+              <button type="button" class="btn col-12 col-md-4 border border-grey rounded-0 text-white-50 px-4 py-2" style="letter-spacing: 1.5px">
                 DELETE PROFILE
               </button>
             </div>
